# tts-helper

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  angular.json  karma.conf.js  package.json  polyfills-browser.js  tsconfig.json  tsconfig.spec.json
.github/workflows/: main.yml  package-version-check.yml  test.yml
lib-backend/tts-helper-audio/src/sources/: skip_when.rs  source_ext.rs
lib-backend/tts-helper-models/: Cargo.toml
lib-backend/tts-helper-models/src/requests/: error.rs
plugins/tauri-plugin-playback/: Cargo.toml  build.rs
plugins/tauri-plugin-playback/permissions/autogenerated/: reference.md
plugins/tauri-plugin-playback/permissions/autogenerated/commands/: list_audio.toml  list_monitors.toml  list_output_devices.toml  list_viewing_devices.toml  play_audio.toml  set_audio_state.toml  set_output_device.toml  set_output_volume.toml  set_playback_state.toml  snapshot_monitor.toml  toggle_pause.toml
plugins/tauri-plugin-playback/permissions/schemas/: schema.json
plugins/tauri-plugin-playback/src/: lib.rs  models.rs  plugin.rs  services.rs
plugins/tauri-plugin-playback/src/models/: audio.rs  common.rs  devices.rs  requests.rs
plugins/tauri-plugin-playback/src/models/requests/: play_audio.rs  set_audio_state.rs  set_playback_state.rs
plugins/tauri-plugin-playback/src/services/: devices.rs  fft.rs  now_playing.rs  playback.rs  tts.rs
plugins/tauri-plugin-playback/src/services/playback/: controller.rs  events.rs  service.rs
src/: index.html  main.ts  styles.scss  test.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/crates/tts-helper-audio/: Cargo.toml
src-tauri/crates/tts-helper-audio/src/: sources.rs
src-tauri/crates/tts-helper-audio/src/sources/: on_finish.rs  on_start.rs  take_for.rs
src-tauri/icons/: icon.icns
src-tauri/src/: api_result.rs  audio_player.rs  commands.rs  lib.rs  main.rs  models.rs  services.rs
src-tauri/src/models/: audio_request.rs  audio_state.rs  auth_event.rs  devices.rs  playing_audio.rs
src-tauri/src/services/: audio_service.rs  auth_get.html  devices.rs  download_audio.rs  now_playing.rs  oauth_listener.rs  obs_websocket.rs  player.rs  tts_listener.rs  websocket_server.rs
src-tauri/src/services/audio/: player.rs
src-tauri/src/services/player/: controllable.rs  controller.rs  player.rs
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  app.routes.ts
src/app/pages/api/: api.component.html  api.component.spec.ts  api.component.ts
src/app/pages/app-settings/: app-settings.component.html  app-settings.component.scss  app-settings.component.spec.ts  app-settings.component.ts
src/app/pages/azure-stt/: azure-stt.component.html  azure-stt.component.scss  azure-stt.component.spec.ts  azure-stt.component.ts
src/app/pages/chat-gpt/: chat-gpt.component.html  chat-gpt.component.spec.ts  chat-gpt.component.ts
src/app/pages/chat-settings/: chat-settings.component.html  chat-settings.component.spec.ts  chat-settings.component.ts
src/app/pages/history/: history.component.html  history.component.spec.ts  history.component.ts  history.module.ts
src/app/pages/home/: home.component.html  home.component.scss  home.component.spec.ts  home.component.ts  home.module.ts
src/app/pages/live-queue/: live-queue.component.html  live-queue.component.scss  live-queue.component.spec.ts  live-queue.component.ts
src/app/pages/moderation/: moderation.component.html  moderation.component.scss  moderation.component.spec.ts  moderation.component.ts  moderation.module.ts
src/app/pages/multi-voices/: multi-voices.component.html  multi-voices.component.ts
src/app/pages/settings/: settings.component.html  settings.component.scss  settings.component.spec.ts  settings.component.ts  settings.module.ts
src/app/pages/tools/: tools.component.html  tools.component.scss  tools.component.spec.ts  tools.component.ts
src/app/pages/tts-mapping/: tts-mapping.component.html  tts-mapping.component.spec.ts  tts-mapping.component.ts
src/app/pages/twitch/: twitch.component.html  twitch.component.scss  twitch.component.spec.ts  twitch.component.ts  twitch.module.ts
src/app/pages/user-logs/: user-logs.component.html  user-logs.component.scss  user-logs.component.spec.ts  user-logs.component.ts  user-logs.interface.ts
src/app/pages/virtual-motion-capture/: virtual-motion-capture.component.html  virtual-motion-capture.component.spec.ts  virtual-motion-capture.component.ts
src/app/pages/vstream/: vstream.component.html  vstream.component.scss  vstream.component.spec.ts  vstream.component.ts
src/app/pages/vtubestudio/: vtubestudio.component.html  vtubestudio.component.spec.ts  vtubestudio.component.ts
src/app/pages/watch-streak/: watch-streak.component.html  watch-streak.component.scss  watch-streak.component.spec.ts  watch-streak.component.ts
src/app/pages/youtube/: youtube.component.html  youtube.component.spec.ts  youtube.component.ts
src/app/shared/api/: twitch.api.ts
src/app/shared/json/: amazon-polly.json  azure-stt.json  stream-elements-options.json  stream-elements.json  tiktok.json  tts-options.json
src/app/shared/services/: app-settings.service.spec.ts  app-settings.service.ts  audio.service.spec.ts  audio.service.ts  azure-stt.service.spec.ts  azure-stt.service.ts  chat.interface.ts  chat.service.spec.ts  chat.service.ts  command.interface.ts  command.service.spec.ts  command.service.ts  config.service.spec.ts  config.service.ts  eleven-labs.service.spec.ts  eleven-labs.service.ts  history.interface.ts  history.service.ts  logs.service.spec.ts  logs.service.ts  obs-websocket.service.spec.ts  obs-websocket.service.ts  openai.factory.ts  openai.service.spec.ts  openai.service.ts  playback.interface.ts  playback.service.spec.ts  playback.service.ts  storage.service.spec.ts  storage.service.ts  streamdeck-websocket.interface.ts  streamdeck-websocket.service.spec.ts  streamdeck-websocket.service.ts  tts-helper-api.service.ts  tts-monster.service.ts  twitch-pubsub.interface.ts  (+15 more)
src/theming/: _palette.scss
(+306 files in other folders)
