[workspace]
resolver = "2"
members = ["src-tauri", "plugins/*", "lib-backend/*"]

[workspace.dependencies]
# Tauri
tauri = "2.0.0-beta"
tauri-build = "2.0.0-beta"
tauri-plugin = "2.0.0-beta"
tauri-plugin-cli = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-http = { version = "2.0.0-beta", features = ["rustls-tls"] }

# Serialization
serde = "1"
serde_with = "3"
serde_json = "1"

# Audio
rodio = "0.17"

# Web
bytes = "1"

# Errors
anyhow = "1"
thiserror = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Utility
crossbeam = "0.8"
static_assertions = "1"
