[workspace]
resolver = "2"
members = ["src-tauri", "plugins/*", "lib-backend/*"]

[workspace.dependencies]
# Tauri
tauri = { version = "2.4.0", features = ["devtools"] }
tauri-build = "2.1.0"
tauri-plugin = "2.1.0"
tauri-plugin-cli = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-http = { version = "2.4.2", features = ["rustls-tls"] }

# Serialization
serde = "1"
serde_with = "3"
serde_json = "1"

# Audio
rodio = "0.20.1"

# Web
bytes = "1"

# Errors
anyhow = "1"
thiserror = "2.0.3"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Utility
crossbeam = "0.8"
static_assertions = "1"
