[package]
name = "tts-helper"
version = "0.1.0"
description = "An application to help streamers manage TTS events."
authors = ["Dylan Warren (https://github.com/Uhuh)"]
license = ""
repository = ""
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
# Tauri
tauri = { workspace = true, features = ["shell-open", "updater", "global-shortcut-all", "devtools"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-playback = { path = "../plugins/tauri-plugin-playback" }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Web
tokio = { version = "1", features = ["rt"] }
axum = { version = "0.7", default-features = false, features = [
    "http1",
    "tokio",
    "json",
    "tracing",
    "ws",
] }
tower-http = { version = "0.5", features = ["cors"] }
http = "1"
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
static_assertions = "1.1.0"
tokio-tungstenite = "*"
futures-channel = "0.3.29"
futures-util = "0.3.29"

# Errors
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
