[package]
name = "tauri-plugin-playback"
version = "0.1.0"
edition = "2021"
publish = false
links = "tauri-plugin-playback"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
# Tauri
tauri = { workspace = true }
tauri-plugin-http = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive", "rc"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
tts-helper-models = { path = "../../lib-backend/tts-helper-models" }

# Audio
rodio = { workspace = true }
tts-helper-audio = { path = "../../lib-backend/tts-helper-audio" }

# Web
bytes = { workspace = true, features = ["serde"] }

# Errors
anyhow = "1"
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Util
crossbeam = { workspace = true }
static_assertions = { workspace = true }
base64 = "0.21.0"
spectrum-analyzer = "1.5.0"
num-complex = "0.4.5"
rustfft = "6.2.0"
xcap = "0.0.10"
image = "0.25"
fast_image_resize = { version = "4.2", features = ["image"] }